argocd/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: argocd
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`argocd.cat.pro.vn`) && Headers(`Content-Type`, `application/grpc`)
      kind: Rule
      services:
        - name: argocd-server
          port: 443
          scheme: https
    - match: Host(`argocd.cat.pro.vn`)
      kind: Rule
      services:
        - name: argocd-server
          port: 80
  tls:
    secretName: argocd-cert-tls
